@@ -71,6 +71,7 @@ Version 2.0.0 FINAL - The "Tiku - the one and only" version.
 		* Solved the DECLARE_ABSTRACT_CLASS() mystery on wx-2.4.2. Now
 		we can have UDP socks5 with wx-2.4.2.
 		* Included CVSDATE with version in amulesig.dat
+		* Fixed an endianness bug with webserver
 
 	volpol
 		* Patch to fix use of deprecated functions in wxGTK-2.5.3.
